fixed alignment on resume portion for mobile

--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -116,7 +116,7 @@
 			.feature-list h3
 			{
 				position: relative;
-				padding: 4px 0 0 48px;
+				padding: 0;
 				line-height: 1.25em;
 			}
 
